# DBS-ADB

./: .gitignore  .gitlab-ci.yml  CLAUDE.md  Cargo.toml  LICENSE  Makefile  README.md  testcase.yml
src/: lib.rs  main.rs
src/btree/: error.rs  mod.rs  node.rs
src/catalog/: mod.rs
src/database/: mod.rs  tests.rs
src/file/: buffer_manager.rs  error.rs  file_manager.rs  mod.rs
src/index/: error.rs  index_file.rs  mod.rs  persistent_btree.rs  serialization.rs  tests.rs
src/lexer/: mod.rs
src/lexer_parser/: lexer.rs  mod.rs  parser.rs
src/record/: error.rs  mod.rs  page.rs  record.rs  schema.rs  table_file.rs  value.rs
