[package]
name = "adb"
version = "0.1.0"
edition = "2024"

[lib]
name = "adb"
path = "src/lib.rs"

[[bin]]
name = "adb"
path = "src/main.rs"

[dependencies]
chumsky = { version = "^0.11", features = ["regex"] }
lru = "0.12"
thiserror = "1.0"
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
regex = "1"
clap = { version = "4.4", features = ["derive"] }
csv = "1.3"
ahash = "0.8" # Fast non-cryptographic hash for HashMap - much faster than SipHash

[dev-dependencies]
tempfile = "3.8"

# [profile.release]
# debug = true
